Creacion de la seccion inicio

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Portafolio 1 Cristhian</title>
+    <title>Portafolio Cristhian</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -30,5 +30,21 @@
             </div>
         </header>
     </div>
+    <!-- SECCION DE INICIO -->
+     <section class="inicio" id="inicio">
+        <div class="contenido-banner">
+            <div class="contenedor-img">
+                <img src="img/cris.jpeg" alt="">
+            </div>
+            <h1>Cristhian Zacarias</h1>
+            <h2>Ingenieria en Desarrollo y Gestión de Software</h2>
+            <div class="redes">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-whatsapp"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-instagram-square"></i></a>
+            </div>
+        </div>   
+     </section>
 </body>
 </html>
