Creacion de la seccion Sobre mi

--- a/index.html
+++ b/index.html
@@ -39,12 +39,94 @@
             <h1>Cristhian Zacarias</h1>
             <h2>Ingenieria en Desarrollo y Gestión de Software</h2>
             <div class="redes">
-                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-facebook-square"></i></a>
                 <a href="#"><i class="fab fa-whatsapp"></i></a>
                 <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-instagram-square"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
         </div>   
      </section>
+     <!-- Seccion sobre mi -->
+      <section id="sobremi" class="sobremi">
+        <div class="contenido-seccion">
+            <h2>Sobre mi</h2>
+            <p><span>Hola, soy Cristhian Zacarias.</span> Ingeniero en Desarrollo y Gestión de Software, 
+                con amplios conocimientos en back-end, desarrollados a través de proyectos propios. Busco 
+                desarrollar mi carrera, contribuyendo con mis habilidades, para lograr diseños finales que 
+                satisfagan las necesidades y preferencias de los clientes.</p>
+
+                <div class="fila">
+                    <!-- Datos Personales -->
+                     <div class="col">
+                        <h3>Datos Personales</h3>
+                        <ul>
+                            <li>
+                                <strong>Cumpleaños: </strong>
+                                14-04-2000
+                            </li>
+                            <li>
+                                <strong>Teléfono: </strong>
+                                +52 722 3608 148
+                            </li>
+                            <li>
+                                <strong>Correo Electrónico: </strong>
+                                cristhianzacarias@gmail.com
+                            </li>
+                            <li>
+                                <strong>WebSite: </strong>
+                                https://cristhianzacarias.github.io/portafolio-cristhian/
+                            </li>
+                            <li>
+                                <strong>Domicilio: </strong>
+                                Molino Abajo, Temoaya, Estado de México
+                            </li>
+                        </ul>
+                     </div>
+
+                     <!-- Intereses -->
+                     <div class="col">
+                        <h3>Intereses</h3>
+                        <div class="contenedor-intereses">
+                            <div class="interes">
+                                <i class="fas fa-gamepad"></i>
+                                <span>Videojuegos</span>
+                            </div>
+                            <div class="interes">
+                                <i class="fas fa-futbol"></i>
+                                <span>Fútbol</span>
+                            </div>
+                            <div class="interes">
+                                <i class="fas fa-video"></i>
+                                <span>Peliculas</span>
+                            </div>
+                            <div class="interes">
+                                <i class="fa-solid fa-people-roof"></i>
+                                <span>Familia</span>
+                            </div>
+                            <div class="interes">
+                                <i class="fas fa-music"></i>
+                                <span>Música</span>
+                            </div>
+                            <div class="interes">
+                                <i class="fab fa-tiktok"></i>
+                                <span>Tik Tok</span>
+                            </div>
+                            <div class="interes">
+                                <i class="fab fa-windows"></i>
+                                <span>Estudiar</span>
+                            </div>
+                            <div class="interes">
+                                <i class="fas fa-cart-arrow-down"></i>
+                                <span>Compas</span>
+                            </div>
+                        </div>
+                     </div>
+                </div>
+                <button>
+                    Descargar CV <i class="fas fa-file-download"></i>
+                    <span class="overlay"></span>
+                </button>
+        </div>
+      </section>
 </body>
 </html>
