Agregar estilos a la seccion sobre mi

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
                                 <strong>Domicilio: </strong>
                                 Molino Abajo, Temoaya, Estado de México
                             </li>
+                            <li>
+                                <strong>Ocupación: </strong>
+                                <span>Empleado</span>
+                            </li>
                         </ul>
                      </div>
 
