Agregar estilos a la seccion de habilidades y correccion de encabezad0

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="#inicio"> INICIO</a></li>
                     <li><a href="#sobremi"> SOBRE MI</a></li>
-                    <li><a href="#skills"> HABILIDADES</a></li>
+                    <li><a href="#habilidades"> HABILIDADES</a></li>
                     <li><a href="#curriculum"> CURRICULUM</a></li>
                     <li><a href="#portafolio"> PORTAFOLIO</a></li>
                     <li><a href="#contacto"> CONTACTO</a></li>
@@ -143,7 +143,7 @@
                     <div class="habilidad">
                         <span>Javascript</span>
                         <div class="barra-habilidad">
-                            <div class="progreso">
+                            <div class="progreso javascript">
                                 <span>75%</span>
                             </div>
                         </div>
@@ -151,7 +151,7 @@
                     <div class="habilidad">
                         <span>Wordpress</span>
                         <div class="barra-habilidad">
-                            <div class="progreso">
+                            <div class="progreso wordpress">
                                 <span>65%</span>
                             </div>
                         </div>
@@ -159,7 +159,7 @@
                     <div class="habilidad">
                         <span>MYSQL</span>
                         <div class="barra-habilidad">
-                            <div class="progreso">
+                            <div class="progreso mysql">
                                 <span>80%</span>
                             </div>
                         </div>
@@ -167,7 +167,7 @@
                     <div class="habilidad">
                         <span>HTML & CSS</span>
                         <div class="barra-habilidad">
-                            <div class="progreso">
+                            <div class="progreso htmlcss">
                                 <span>60%</span>
                             </div>
                         </div>
@@ -175,7 +175,7 @@
                     <div class="habilidad">
                         <span>Laravel</span>
                         <div class="barra-habilidad">
-                            <div class="progreso">
+                            <div class="progreso laravel">
                                 <span>70%</span>
                             </div>
                         </div>
@@ -187,7 +187,7 @@
                     <div class="habilidad">
                         <span>Trabajo en Equipo</span>
                         <div class="barra-habilidad">
-                            <div class="progreso">
+                            <div class="progreso trabajoequipo">
                                 <span>85%</span>
                             </div>
                         </div>
@@ -195,7 +195,7 @@
                     <div class="habilidad">
                         <span>Dedicación</span>
                         <div class="barra-habilidad">
-                            <div class="progreso">
+                            <div class="progreso dedicacion">
                                 <span>90%</span>
                             </div>
                         </div>
@@ -203,7 +203,7 @@
                     <div class="habilidad">
                         <span>Creatividad</span>
                         <div class="barra-habilidad">
-                            <div class="progreso">
+                            <div class="progreso creatividad">
                                 <span>70%</span>
                             </div>
                         </div>
@@ -211,7 +211,7 @@
                     <div class="habilidad">
                         <span>Comunicación</span>
                         <div class="barra-habilidad">
-                            <div class="progreso">
+                            <div class="progreso comunicacion">
                                 <span>83%</span>
                             </div>
                         </div>
@@ -219,7 +219,7 @@
                     <div class="habilidad">
                         <span>Puntualidad</span>
                         <div class="barra-habilidad">
-                            <div class="progreso">
+                            <div class="progreso puntualidad">
                                 <span>94%</span>
                             </div>
                         </div>
