--- a/index.html
+++ b/index.html
@@ -228,5 +228,74 @@
             </div>
         </div>
     </section>
+    <!-- Seccion de curriculum -->
+     <section class="curriculum" id="curriculum">
+        <div class="contenido-seccion">
+            <h2>Curriculum</h2>
+            <div class="fila">
+                <div class="col izquerda">
+                    <h3>Educación</h3>
+                    <div class="item izq">
+                        <h4>Ingeniería en Desarrollo y Gestión de Software</h4>
+                        <span class="casa">Universidad Tecnologica Del Valle de Toluca</span>
+                        <span class="fecha">2020 - 2022</span>
+                        <p>Creación y diseño de páginas Web.</p>
+                        <div class="conectori">
+                            <div class="circuloi"></div>
+                        </div>
+                    </div>
+                    <div class="item izq">
+                        <h4>Técnico Superior Universitario en Tecnologías de la Información y Comunicación</h4>
+                        <span class="casa">Universidad Tecnológica Del Valle de Toluca</span>
+                        <span class="fecha">2018 - 2020</span>
+                        <p>Desarrollar soluciones tecnológicas para atender las necesidades de las organizaciones.</p>
+                        <div class="conectori">
+                            <div class="circuloi"></div>
+                        </div>
+                    </div>
+                    <div class="item izq">
+                        <h4>Técnico en Programación</h4>
+                        <span class="casa">Colegio de Estudios, Científicos y Tecnológicos del Estado de México</span>
+                        <span class="fecha">2015 - 2018</span>
+                        <p>Diseñar, desarrollar, instalar y mantener software de aplicación.</p>
+                        <div class="conectori">
+                            <div class="circuloi"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col derecha">
+                    <h3>Experiencia</h3>
+                    <div class="item der">
+                        <h4>CRM - Sigcloud | Practicante</h4>
+                        <span class="casa">Diseños y Soluciones Web</span>
+                        <span class="fecha">2022 - 2022</span>
+                        <p>Creación y diseño de páginas Web.</p>
+                        <div class="conectord">
+                            <div class="circulod"></div>
+                        </div>
+                    </div>
+                    <div class="item der">
+                        <h4>Documentación a entrevistas TIC | Practicante</h4>
+                        <span class="casa">Universidad Tecnológica Del Valle de Toluca</span>
+                        <span class="fecha">2020 - 2020</span>
+                        <p>Analizar, diseñar, desarrollar, instalar y mantener software de aplicación tomando como base los requerimientos del usuario.</p>
+                        <div class="conectord">
+                            <div class="circulod"></div>
+                        </div>
+                    </div>
+                    <div class="item der">
+                        <h4>Ayudante General</h4>
+                        <span class="casa">Italika</span>
+                        <span class="fecha">Actualmente</span>
+                        <p>Descarga y acomodo de almacen.</p>
+                        <div class="conectord">
+                            <div class="circulod"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section>
 </body>
 </html>
