--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <div class="contenido-seccion">
             <h2>Curriculum</h2>
             <div class="fila">
-                <div class="col izquerda">
+                <div class="col izquierda">
                     <h3>Educación</h3>
                     <div class="item izq">
                         <h4>Ingeniería en Desarrollo y Gestión de Software</h4>
@@ -265,7 +265,7 @@
                 </div>
 
                 <div class="col derecha">
-                    <h3>Experiencia</h3>
+                    <h3>Experiencia de trabajo</h3>
                     <div class="item der">
                         <h4>CRM - Sigcloud | Practicante</h4>
                         <span class="casa">Diseños y Soluciones Web</span>
