Realizacion de seccion portafolio

--- a/index.html
+++ b/index.html
@@ -297,5 +297,55 @@
             </div>
         </div>
      </section>
+     <!-- Seccion de portafolio -->
+      <section class="portafolio" id="portafolio">
+        <div class="contenido-seccion">
+            <h2>Portafolio</h2>
+            <div class="galeria">
+                <div class="proyecto">
+                    <img src="img/carrito.jpg" alt="">
+                    <div class="overlay">
+                        <h3>Carrito de Compras</h3>
+                        <p>Ventas</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/aplicacion.jpeg" alt="">
+                    <div class="overlay">
+                        <h3>Sistema Web</h3>
+                        <p>Ventas</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/ecommerce.jpg" alt="">
+                    <div class="overlay">
+                        <h3>E-commerce</h3>
+                        <p>Ventas</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/software.jpg" alt="">
+                    <div class="overlay">
+                        <h3>Pagina Web</h3>
+                        <p>Ventas</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/crm.png" alt="">
+                    <div class="overlay">
+                        <h3>CRM</h3>
+                        <p>Ventas</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/images.jpg" alt="">
+                    <div class="overlay">
+                        <h3>Programación</h3>
+                        <p>Ventas</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </section>
 </body>
 </html>
