--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </header>
     </div>
     <!-- SECCION DE INICIO -->
-     <section class="inicio" id="inicio">
+    <section class="inicio" id="inicio">
         <div class="contenido-banner">
             <div class="contenedor-img">
                 <img src="img/cris.jpeg" alt="">
@@ -44,15 +44,15 @@
                 <a href="#"><i class="fab fa-linkedin"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
-        </div>   
-     </section>
+        </div>
+    </section>
      <!-- Seccion sobre mi -->
-      <section id="sobremi" class="sobremi">
+    <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre mi</h2>
-            <p><span>Hola, soy Cristhian Zacarias.</span> Ingeniero en Desarrollo y Gestión de Software, 
-                con amplios conocimientos en back-end, desarrollados a través de proyectos propios. Busco 
-                desarrollar mi carrera, contribuyendo con mis habilidades, para lograr diseños finales que 
+            <p><span>Hola, soy Cristhian Zacarias.</span> Ingeniero en Desarrollo y Gestión de Software,
+                con amplios conocimientos en back-end, desarrollados a través de proyectos propios. Busco
+                desarrollar mi carrera, contribuyendo con mis habilidades, para lograr diseños finales que
                 satisfagan las necesidades y preferencias de los clientes.</p>
 
                 <div class="fila">
@@ -131,7 +131,7 @@
                     <span class="overlay"></span>
                 </button>
         </div>
-      </section>
+    </section>
       <!-- Seccion de habilidades -->
     <section class="habilidades" id="habilidades">
         <div class="contenido-seccion">
@@ -229,7 +229,7 @@
         </div>
     </section>
     <!-- Seccion de curriculum -->
-     <section class="curriculum" id="curriculum">
+    <section class="curriculum" id="curriculum">
         <div class="contenido-seccion">
             <h2>Curriculum</h2>
             <div class="fila">
@@ -296,9 +296,9 @@
                 </div>
             </div>
         </div>
-     </section>
+    </section>
      <!-- Seccion de portafolio -->
-      <section class="portafolio" id="portafolio">
+    <section class="portafolio" id="portafolio">
         <div class="contenido-seccion">
             <h2>Portafolio</h2>
             <div class="galeria">
@@ -346,6 +346,46 @@
                 </div>
             </div>
         </div>
-      </section>
+    </section>
+    <!-- Seccion de contacto -->
+     <section id="contacto" class="contacto">
+        <div class="contenido-seccion">
+            <h2>Contacto</h2>
+            <div class="fila">
+                <!-- Formulario -->
+                <div class="col">
+                    <input type="text" name="Nombre:" id="">
+                    <input type="tel" name="Teléfono:" id="">
+                    <input type="email" name="Correo Electrónico:" id="">
+                    <input type="text" name="Asunto" id="">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
+                    <button>
+                        Enviar Mensaje <i class="fas fa-paper-plane"></i>
+                        <span class="overlay"></span>
+                    </button>
+                </div>
+                <!-- Mapa -->
+                 <div class="col">
+                    <img src="img/ubicacion.png" alt="" srcset="">
+                    <div class="info">
+                        <ul>
+                            <li>
+                                <i class="fas fa-map-pin"></i>
+                                Prolongación Lazaro Cardénas 116, Molino Abajo Temoaya 50886
+                            </li>
+                            <li>
+                                <i class="fas fa-mobile-alt"></i>
+                                Llamadas: 722 3608 148
+                            </li>
+                            <li>
+                                <i class="fas fa-envelope"></i>
+                                Correo: cristhianzacarias@gmail.com
+                            </li>
+                        </ul>
+                    </div>
+                 </div>
+            </div>
+        </div>
+     </section>
 </body>
 </html>
