Agregar estilos a la seccion de contacto

--- a/index.html
+++ b/index.html
@@ -354,10 +354,10 @@
             <div class="fila">
                 <!-- Formulario -->
                 <div class="col">
-                    <input type="text" name="Nombre:" id="">
-                    <input type="tel" name="Teléfono:" id="">
-                    <input type="email" name="Correo Electrónico:" id="">
-                    <input type="text" name="Asunto" id="">
+                    <input type="text" name="Nombre:" id="" placeholder="Nombre">
+                    <input type="tel" name="Teléfono:" id="" placeholder="Teléfono">
+                    <input type="email" name="Correo Electrónico:" id="" placeholder="Correo electrónico">
+                    <input type="text" name="Asunto" id="" placeholder="Asunto">
                     <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
                     <button>
                         Enviar Mensaje <i class="fas fa-paper-plane"></i>
