--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         </div>
     </section>
     <!-- Seccion de contacto -->
-     <section id="contacto" class="contacto">
+    <section id="contacto" class="contacto">
         <div class="contenido-seccion">
             <h2>Contacto</h2>
             <div class="fila">
@@ -386,6 +386,18 @@
                  </div>
             </div>
         </div>
-     </section>
+    </section>
+    <!-- Footer -->
+     <footer>
+        <a href="#inicio" class="arriba">
+            <i class="fas fa-angle-double-up"></i>
+        </a>
+        <div class="redes">
+            <a href="#"><i class="fab fa-facebook-square"></i></a>
+            <a href="#"><i class="fab fa-whatsapp"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+     </footer>
 </body>
 </html>
