Correccion de reponsiva en interes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h2>Ingenieria en Desarrollo y Gestión de Software</h2>
             <div class="redes">
                 <a href="#"><i class="fab fa-facebook-square"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/7223608148?text=Hola"><i class="fab fa-whatsapp"></i></a>
                 <a href="#"><i class="fab fa-linkedin"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
@@ -394,7 +394,7 @@
         </a>
         <div class="redes">
             <a href="#"><i class="fab fa-facebook-square"></i></a>
-            <a href="#"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://wa.me/7223608148?text=Hola"><i class="fab fa-whatsapp"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
