Correccion de redes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="redes">
                 <a href="#"><i class="fab fa-facebook-square"></i></a>
                 <a href="https://wa.me/7223608148?text=Hola"><i class="fab fa-whatsapp"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="https://profile.indeed.com/p/cristhianz-xx01w90"><i class="fab fa-linkedin"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
@@ -66,15 +66,15 @@
                             </li>
                             <li>
                                 <strong>Teléfono: </strong>
-                                +52 722 3608 148
+                                <a href="tel:+7223608148">+52 722 3608 148</a>
                             </li>
                             <li>
                                 <strong>Correo Electrónico: </strong>
-                                cristhianzacarias@gmail.com
+                                <a href="mailto:cristhianzacarias@gmail.com?Subject=">cristhianzacarias@gmail.com</a>
                             </li>
                             <li>
                                 <strong>WebSite: </strong>
-                                https://cristhianzacarias.github.io/portafolio-cristhian/
+                                <a href="http://cristhianzacarias.github.io/portafolio-cristhian/">https://cristhianzacarias.github.io/portafolio-cristhian/</a>
                             </li>
                             <li>
                                 <strong>Domicilio: </strong>
@@ -375,11 +375,11 @@
                             </li>
                             <li>
                                 <i class="fas fa-mobile-alt"></i>
-                                Llamadas: 722 3608 148
+                                <a href="tel:+7223608148">Llamadas: +52 722 3608 148</a>
                             </li>
                             <li>
                                 <i class="fas fa-envelope"></i>
-                                Correo: cristhianzacarias@gmail.com
+                                <a href="mailto:cristhianzacarias@gmail.com?Subject=">Correo: cristhianzacarias@gmail.com</a>
                             </li>
                         </ul>
                     </div>
@@ -395,7 +395,7 @@
         <div class="redes">
             <a href="#"><i class="fab fa-facebook-square"></i></a>
             <a href="https://wa.me/7223608148?text=Hola"><i class="fab fa-whatsapp"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://profile.indeed.com/p/cristhianz-xx01w90"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
      </footer>
