--- a/index.html
+++ b/index.html
@@ -126,10 +126,11 @@
                         </div>
                      </div>
                 </div>
-                <button>
+                <a class="button" href="pdf/CV - Cristhian Zacarias Diaz.pdf" download="CV - Cristhian Zacarias Diaz">
                     Descargar CV <i class="fas fa-file-download"></i>
                     <span class="overlay"></span>
-                </button>
+                </a>
+                
         </div>
     </section>
       <!-- Seccion de habilidades -->
